@startuml

class NewsExtractor{
    +List<NewsInfo> getNews()
    #parseNews()
}

class NewsCollector {
    + void refreshNews()
    + List<NewsInfo> getNews()
}

class NewsInfo{
    - String description;
    - String imageUrl;
    - String title;
}

class NewsCasher{
    - SortedSet collectedNews;
}

class HttpClient
interface Comparable

NewsExtractor *-- HttpClient
NewsExtractor - NewsInfo : produce >
NewsCollector *-- NewsInfo
NewsInfo <|-- Comparable
NewsCollector -- NewsExtractor : use >
NewsCollector <|-NewsCasher

note "Collect  news" as N1
note "Get data \nfrom stream \nand make news" as N2
note "Store sorted news" as N3

NewsCollector . N1
NewsExtractor .. N2
NewsCasher .. N3
@enduml